# serde_arrow

example/: Cargo.toml
serde_arrow/: Cargo.toml
