[package]
name = "serde_arrow"
version = "0.4.0"
authors = ["Christopher Prohm <mail@cprohm.de>"]
edition = "2021"
description  = "convert sequences of structs / maps to arrow tables"
readme = "../Readme.md"
repository = "https://github.com/chmp/serde_arrow"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "15.0.0"
serde = "1.0.137"

# TODO: make optional, only required for str -> date conversions
chrono = "0.4.19"

[dev-dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
